--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,9 @@
 {
   "name": "your_shiny_app",
+  "platform": {
+    "r": "4.0.0"
+  },
   "dependencies": {
-    "R": "4.1.0",
     "shiny": "1.7.1",
     "ggplot2": "3.3.5",
     "patchwork": "1.1.1",
@@ -10,4 +12,5 @@
     "grid": "4.0.0"
   }
 }
+
 
