--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,9 @@
 {
     "name": "SAMI",
+    "platform": {
+        "r": "4.0.0"
+    },
     "dependencies": {
-        "R": "4.0.0",
         "shiny": "1.7.1",
         "ggplot2": "3.3.5",
         "patchwork": "1.1.1",
@@ -10,4 +12,3 @@
         "grid": "4.0.0"
     }
 }
-
